2008-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-inline-text-html-render-with-w3m): Make it simple and
	fast.

	* gnus-art.el (gnus-article-wash-html-with-w3m): Ditto.

2008-12-04  Naohiro Aota  <nao.aota@gmail.com>

	* mm-view.el (mm-inline-text-html-render-with-w3m): Put special keymap
	on links.

	* gnus-art.el (gnus-article-wash-html-with-w3m): Ditto.

2008-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-idna-to-ascii-rhs-1): Protect against local
	users' addresses that don't have domain parts.
	(message-idna-to-ascii-rhs): Use message-narrow-to-headers-or-head
	rather than message-narrow-to-head since there will be the message
	header separator.

2008-12-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-retrieve-headers-progress): Don't use nnimap-demule
	since the result is inserted in a unibyte buffer anyway.
	(nnimap-demule-use-string-to-multibyte): Remove.
	(nnimap-demule): Alias it to mm-string-to-multibyte.

2008-11-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnimap.el (nnimap-demule-use-string-to-multibyte): New temporary
	variable for debugging bug#464 and bug#1174.
	(nnimap-demule): Use it.

2008-11-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-score.el (gnus-score-find-trace): Handle default score in total
	score calculation correctly.

2008-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-send-mail): Just set the buffer to unibyte
	rather than use mm-with-unibyte-current-buffer which does a lot more.
	(message-send-mail-partially): Don't bother with
	mm-with-unibyte-current-buffer since it's already been made unibyte by
	message-send-mail.

2008-11-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* nnrss.el (nnrss-make-hash-index): Debug message of full item.

2008-11-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* netrc.el (netrc-parse): If a list is passed in as FILE, return it.

2008-11-04  Katsumi Yamaoka  <yamaoka@jpl.org>
